Загатовка разметки для окна

--- a/Проект_2/FileEncryptor.WPF/Views/Windows/MainWindow.xaml
+++ b/Проект_2/FileEncryptor.WPF/Views/Windows/MainWindow.xaml
@@ -5,8 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FileEncryptor.WPF.Views.Windows"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
-    </Grid>
+        Height="450" Width="800"
+        Title="{Binding Title}" 
+        DataContext="{Binding MainWindowModel, Source={StaticResource Locator}}">
+    <DockPanel>
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="Файл">
+                <MenuItem Header="Выход"/>
+            </MenuItem>
+        </Menu>
+        <StatusBar DockPanel.Dock="Bottom">
+            <StatusBarItem DockPanel.Dock="Right">
+                <ResizeGrip />
+            </StatusBarItem>
+            <StatusBarItem Content="Готов!"/>
+        </StatusBar>
+        <Grid/>
+    </DockPanel>
 </Window>
