--- a/Проект_2/FileEncryptor.WPF/Infrastructure/Commands/Commands.xaml
+++ b/Проект_2/FileEncryptor.WPF/Infrastructure/Commands/Commands.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:FileEncryptor.WPF.Infrastructure.Commands"
-                    >
+                    xmlns:local="clr-namespace:FileEncryptor.WPF.Infrastructure.Commands">
+    
     <local:CloseWindow x:Key="CloseWindowCommand"/>
 </ResourceDictionary>
