--- a/Проект_3/Bookinist/App.xaml
+++ b/Проект_3/Bookinist/App.xaml
@@ -1,9 +1,13 @@
 ﻿<Application x:Class="Bookinist.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Bookinist"
+             xmlns:local="clr-namespace:Bookinist" 
+             xmlns:vm="clr-namespace:Bookinist.ViewModels"
              StartupUri="Views/Windows/MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+
+            <vm:ViewModelLocator x:Key="Locator"/>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
