--- a/Проект_3/Bookinist/Views/StatisticView.xaml
+++ b/Проект_3/Bookinist/Views/StatisticView.xaml
@@ -1,12 +1,32 @@
 ﻿<UserControl x:Class="Bookinist.Views.StatisticView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" mc:Ignorable="d"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Bookinist.Views"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:l="clr-namespace:Bookinist.Views"
+             xmlns:vm="clr-namespace:Bookinist.ViewModels"
+             d:DataContext="{d:DesignInstance {x:Type vm:StatisticViewModel}}"
+             d:DesignWidth="800" d:DesignHeight="450">
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding ComputeStatisticCommand}"/>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
+    <TabControl>
+        <TabItem Header="Книги">
+            <GroupBox Header="Бестселлеры">
+                <DataGrid ItemsSource="{Binding Bestsellers}" IsReadOnly="True">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Книга" Width="*" Binding="{Binding Book.Name}"/>
+                        <DataGridTextColumn Header="Количество продаж" Binding="{Binding SellCount}"/>
+                        <DataGridTextColumn Header="Полная стоимость" Binding="{Binding SumCost}"/>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </GroupBox>
+        </TabItem>
+        <TabItem Header="Категории"></TabItem>
+        <TabItem Header="Покупатели"></TabItem>
+        <TabItem Header="Продавцы"></TabItem>
+    </TabControl>
 </UserControl>
