--- a/Проект_5/ManageDB/View/MainWindow.xaml
+++ b/Проект_5/ManageDB/View/MainWindow.xaml
@@ -14,7 +14,7 @@
         
         <TabControl Grid.Row="0">
             <TabItem x:Name="UsersTab" Header="Staf">
-                <ListView>
+                <ListView ItemsSource="{Binding AllUsers}">
                     <ListView.View>
                         <GridView>
                             <GridViewColumn Header="Name"/>
@@ -29,7 +29,7 @@
             </TabItem>
             
             <TabItem x:Name="PositionTab" Header="Positions">
-                <ListView>
+                <ListView ItemsSource="{Binding AllPositions}">
                     <ListView.View>
                         <GridView>
                             <GridViewColumn Header="Name"/>
@@ -43,7 +43,7 @@
             </TabItem>
             
             <TabItem x:Name="DepartmentsTab" Header="Department">
-                <ListView>
+                <ListView ItemsSource="{Binding AllDepartments}">
                     <ListView.View>
                         <GridView>
                             <GridViewColumn Header="Name"/>
@@ -53,5 +53,12 @@
                 </ListView>
             </TabItem>
         </TabControl>
+        <StackPanel Grid.Row="1" Orientation="Horizontal"
+                    HorizontalAlignment="Right">
+            <Button Content="Новый сотрудник" Command="{Binding}"/>
+            <Button Content="Новая позиция" Command="{Binding}"/>
+            <Button Content="Новый отдел" Command="{Binding}"/>
+
+        </StackPanel>
     </Grid>
 </Window>
