--- a/Проект_5/ManageDB/View/AddNewDepartmentWindow.xaml
+++ b/Проект_5/ManageDB/View/AddNewDepartmentWindow.xaml
@@ -3,9 +3,14 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ManageDB.View"
+        xmlns:local="clr-namespace:ManageDB.View" 
+        xmlns:viewmodel="clr-namespace:ManageDB.ViewModel" 
         mc:Ignorable="d"
-        Title="AddNewDepartmentWindow" Height="300" Width="300">
+        Title="AddNewDepartmentWindow" Height="300" Width="300"
+        x:Name="AddNewDepartmentWnd">
+    <Window.DataContext>
+        <viewmodel:DataManageVM/>
+    </Window.DataContext>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -17,10 +22,11 @@
                     HorizontalAlignment="Center"
                     Width="200">
             <TextBlock Text="Name"/>
-            <TextBox Text="" Margin="0,5,0,0"/>
+            <TextBox x:Name="txtBox" Text="{Binding DepartmentName}" Margin="0,5,0,0"/>
         </StackPanel>
 
-        <Button Grid.Row="1">
+        <Button Grid.Row="1" Command="{Binding AddNewDepartment}"
+                CommandParameter="{Binding ElementName=AddNewDepartmentWnd}">
             Add department
         </Button>
     </Grid>
