--- a/Проект_5/ManageDB/View/MessageView.xaml
+++ b/Проект_5/ManageDB/View/MessageView.xaml
@@ -12,11 +12,12 @@
             <RowDefinition Height="25"/>
         </Grid.RowDefinitions>
         
-        <TextBlock Grid.Row="0"
+        <TextBlock x:Name="MessageText"
+                   Grid.Row="0"
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center"
                    TextWrapping="Wrap"
                    />
-        <Button Grid.Row="1" Content="Ok"/>
+        <Button Grid.Row="1" Content="Ok" Click="ButtonClose_Click"/>
     </Grid>
 </Window>
