--- a/Projects_Examples/Проект_6/HotelReservation/MainWindow.xaml
+++ b/Projects_Examples/Проект_6/HotelReservation/MainWindow.xaml
@@ -3,10 +3,14 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:HotelReservation"
+        xmlns:local="clr-namespace:HotelReservation" 
+        xmlns:views="clr-namespace:HotelReservation.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
+        Title="MainWindow" 
+        Height="450" Width="800"
+        Background="AliceBlue"
+        FontSize="14">
+    <Grid Margin="20 10" MaxWidth="600">
+        <views:ReservationListingView/>
     </Grid>
 </Window>
