--- a/Projects_Examples/Проект_6/HotelReservation/Views/MakeReservationView.xaml
+++ b/Projects_Examples/Проект_6/HotelReservation/Views/MakeReservationView.xaml
@@ -3,11 +3,16 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:HotelReservation.Views"
+             xmlns:local="clr-namespace:HotelReservation.Views" 
+             xmlns:vm="clr-namespace:HotelReservation.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="450" 
              d:DesignWidth="800"
              Background="AliceBlue">
+
+    <UserControl.DataContext>
+        <vm:MakeReservationViewModel/>
+    </UserControl.DataContext>
     
     <Grid Grid.IsSharedSizeScope="True">
         <Grid.RowDefinitions>
@@ -29,8 +34,8 @@
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
 
-            <TextBlock Grid.Row="0" Text="Name"/>
-            <TextBox Grid.Row="1" Margin="0,5,0,0" Text=""/>
+            <TextBlock Grid.Row="0" Text="UserName"/>
+            <TextBox Grid.Row="1" Margin="0,5,0,0" Text="{Binding UserName}"/>
         </Grid>
 
         <Grid Grid.Row="2" Margin="0,10,0,0">
@@ -50,7 +55,7 @@
             <TextBox Grid.Row="1"
                      Grid.Column="0" 
                      Margin="0,5,0,0" 
-                     Text=""
+                     Text="{Binding FloorNumber}"
                      />
             <TextBlock Grid.Row="0" 
                        Grid.Column="1" 
@@ -60,7 +65,7 @@
             <TextBox Grid.Row="1"
                      Grid.Column="1" 
                      Margin="10,5,0,0" 
-                     Text=""
+                     Text="{Binding RoomNumber}"
                      />
         </Grid>
 
@@ -81,7 +86,7 @@
             <DatePicker Grid.Row="1"
                         Grid.Column="0" 
                         Margin="0,5,0,0" 
-                        SelectedDate=""
+                        SelectedDate="{Binding StartDate}"
                         />
             <TextBlock Grid.Row="0" 
                        Grid.Column="1" 
@@ -91,13 +96,13 @@
             <DatePicker Grid.Row="1"
                      Grid.Column="1" 
                      Margin="10,5,0,0" 
-                     SelectedDate=""
+                     SelectedDate="{Binding EndDate}"
                      />
         </Grid>
 
         <StackPanel Grid.Row="4" Orientation="Horizontal" Margin="0,25,0,0">
-            <Button Content="Submint"/>
-            <Button Content="Cancel" Margin="10,0,0,0"/>
+            <Button Content="Submint" Command="{Binding SubmitCommand}"/>
+            <Button Content="Cancel" Command="{Binding CancelCommand}" Margin="10,0,0,0"/>
         </StackPanel>
 
     </Grid>
