Перенос точки входа в код

--- a/Projects_Examples/Проект_6/HotelReservation/MainWindow.xaml
+++ b/Projects_Examples/Проект_6/HotelReservation/MainWindow.xaml
@@ -11,13 +11,14 @@
         Background="AliceBlue"
         FontSize="14">
     <Grid Margin="20 10" MaxWidth="600">
-        <TabControl>
+        <views:MakeReservationView DataContext="{Binding CurrentViewModel}"/>
+        <!--<TabControl>
             <TabItem Header="MAKE">
                 <views:MakeReservationView/>
             </TabItem>
             <TabItem Header="ReservationListing">
                 <views:ReservationListingView/>
             </TabItem>
-        </TabControl>
+        </TabControl>-->
     </Grid>
 </Window>
