--- a/Projects_Examples/Проект_6/HotelReservation/Views/MakeReservationView.xaml
+++ b/Projects_Examples/Проект_6/HotelReservation/Views/MakeReservationView.xaml
@@ -35,7 +35,8 @@
             </Grid.RowDefinitions>
 
             <TextBlock Grid.Row="0" Text="UserName"/>
-            <TextBox Grid.Row="1" Margin="0,5,0,0" Text="{Binding UserName}"/>
+            <TextBox Grid.Row="1" Margin="0,5,0,0" 
+                     Text="{Binding UserName, UpdateSourceTrigger=PropertyChanged}"/>
         </Grid>
 
         <Grid Grid.Row="2" Margin="0,10,0,0">
@@ -55,7 +56,7 @@
             <TextBox Grid.Row="1"
                      Grid.Column="0" 
                      Margin="0,5,0,0" 
-                     Text="{Binding FloorNumber}"
+                     Text="{Binding FloorNumber, UpdateSourceTrigger=PropertyChanged}"
                      />
             <TextBlock Grid.Row="0" 
                        Grid.Column="1" 
@@ -65,7 +66,7 @@
             <TextBox Grid.Row="1"
                      Grid.Column="1" 
                      Margin="10,5,0,0" 
-                     Text="{Binding RoomNumber}"
+                     Text="{Binding RoomNumber, UpdateSourceTrigger=PropertyChanged}"
                      />
         </Grid>
 
@@ -86,7 +87,7 @@
             <DatePicker Grid.Row="1"
                         Grid.Column="0" 
                         Margin="0,5,0,0" 
-                        SelectedDate="{Binding StartDate}"
+                        SelectedDate="{Binding StartDate, UpdateSourceTrigger=PropertyChanged}"
                         />
             <TextBlock Grid.Row="0" 
                        Grid.Column="1" 
@@ -96,7 +97,7 @@
             <DatePicker Grid.Row="1"
                      Grid.Column="1" 
                      Margin="10,5,0,0" 
-                     SelectedDate="{Binding EndDate}"
+                     SelectedDate="{Binding EndDate, UpdateSourceTrigger=PropertyChanged}"
                      />
         </Grid>
 
