--- a/Projects_Examples/Проект_6/HotelReservation/Views/ReservationListingView.xaml
+++ b/Projects_Examples/Проект_6/HotelReservation/Views/ReservationListingView.xaml
@@ -14,6 +14,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0">
@@ -82,5 +83,10 @@
                 </GridView>
             </ListView.View>
         </ListView>
+
+        <local:MakeReservationView DataContext="{Binding MakeReservationViewModel}"
+                                   Grid.Row="2" Margin="0,20,0,0">
+        </local:MakeReservationView>
+        
     </Grid>
 </UserControl>
