Форма забронированных номеров

--- a/Projects_Examples/Проект_6/HotelReservation/Views/ReservationListingView.xaml
+++ b/Projects_Examples/Проект_6/HotelReservation/Views/ReservationListingView.xaml
@@ -76,7 +76,7 @@
 
                         <ListView.View>
                             <GridView>
-                                <GridViewColumn Header="Номер комнаты">
+                                <GridViewColumn Header="Бронь">
                                     <GridViewColumn.CellTemplate>
                                         <DataTemplate>
                                             <TextBlock HorizontalAlignment="Center" Text="{Binding RoomID}"/>
