--- a/Projects_Examples/Проект_7/Trading.WPF/Controls/NavigationBar.xaml
+++ b/Projects_Examples/Проект_7/Trading.WPF/Controls/NavigationBar.xaml
@@ -12,9 +12,12 @@
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Text="Simple Trader"/>
+        <TextBlock 
+            Grid.Row="0" 
+            Text="Simple Trader"
+            Background="{StaticResource BrushPrimary1}"/>
 
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="1" Background="{StaticResource BrushPrimary2}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition Width="auto"/>
