--- a/Projects_Examples/Проект_7/Trading.WPF/App.xaml
+++ b/Projects_Examples/Проект_7/Trading.WPF/App.xaml
@@ -1,13 +1,24 @@
 ﻿<Application x:Class="Trading.WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Trading.WPF">
+             xmlns:local="clr-namespace:Trading.WPF"
+             xmlns:vm="clr-namespace:Trading.WPF.ViewModels"
+             xmlns:v="clr-namespace:Trading.WPF.Views">
     <Application.Resources>
 
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Styles/Common.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+
+            <DataTemplate DataType="{x:Type vm:HomeViewModel}">
+                <v:HomeView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type vm:PortfolioViewModel}">
+                <v:PortfolioView/>
+            </DataTemplate>
+
         </ResourceDictionary>
          
     </Application.Resources>
