--- a/Projects_Examples/Проект_7/Trading.WPF/Controls/NavigationBar.xaml
+++ b/Projects_Examples/Проект_7/Trading.WPF/Controls/NavigationBar.xaml
@@ -16,9 +16,16 @@
         <TextBlock 
             Grid.Row="0" 
             Text="Simple Trader"
+            Padding="10"
+            FontSize="28"
+            Foreground="White"
             Background="{StaticResource BrushPrimary1}"/>
 
         <Grid Grid.Row="1" Background="{StaticResource BrushPrimary2}">
+            <Grid.Resources>
+                <Style TargetType="RadioButton" BasedOn="{StaticResource NavButton}"/>
+            </Grid.Resources>
+            
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition Width="auto"/>
