--- a/Projects_Examples/Проект_7/Trading.WPF/Controls/NavigationBar.xaml
+++ b/Projects_Examples/Проект_7/Trading.WPF/Controls/NavigationBar.xaml
@@ -5,8 +5,15 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Trading.WPF.Controls"
              xmlns:nav="clr-namespace:Trading.WPF.State.Navigators"
+             xmlns:vm="clr-namespace:Trading.WPF.ViewModels"
+             xmlns:converters="clr-namespace:Trading.WPF.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+
+    <UserControl.Resources>
+        <converters:EqualValueToParameterConverter x:Key="EqualValueToParameterConverter"/>
+    </UserControl.Resources>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -36,12 +43,18 @@
 
             <RadioButton 
                 Grid.Column="0" 
-                Content="Home" 
+                Content="Home"
+                IsChecked="{Binding CurrentViewModel, Mode=OneWay,
+                                    Converter={StaticResource EqualValueToParameterConverter},
+                                    ConverterParameter={x:Type vm:HomeViewModel}}"
                 Command="{Binding UpdateCurrentViewModelCommand}"
                 CommandParameter="{x:Static nav:ViewType.Home}"/>
             <RadioButton 
                 Grid.Column="1"
                 Content="Portfolio"
+                IsChecked="{Binding CurrentViewModel, Mode=OneWay,
+                                    Converter={StaticResource EqualValueToParameterConverter},
+                                    ConverterParameter={x:Type vm:PortfolioViewModel}}"
                 Command="{Binding UpdateCurrentViewModelCommand}"
                 CommandParameter="{x:Static nav:ViewType.Portfolio}"/>
             <RadioButton Grid.Column="2" Content="Buy"/>
