--- a/Projects_Examples/Проект_7/Trading.WPF/Views/HomeView.xaml
+++ b/Projects_Examples/Проект_7/Trading.WPF/Views/HomeView.xaml
@@ -4,10 +4,21 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Trading.WPF.Views"
+             xmlns:controls="clr-namespace:Trading.WPF.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+        </Grid.RowDefinitions>
         <TextBlock Text="Home"/>
 
+        <controls:MajorIndexListing 
+            Grid.Row="1" 
+            Margin="0,10"
+            HorizontalAlignment="Center"
+            DataContext="{Binding MajorIndexListingViewModel}"
+            />
     </Grid>
 </UserControl>
