--- a/Projects_Examples/Проект_7/Trading.WPF/App.xaml
+++ b/Projects_Examples/Проект_7/Trading.WPF/App.xaml
@@ -19,6 +19,9 @@
             <DataTemplate DataType="{x:Type vm:PortfolioViewModel}">
                 <v:PortfolioView/>
             </DataTemplate>
+            <DataTemplate DataType="{x:Type vm:BuyViewModel}">
+                <v:BuyView/>
+            </DataTemplate>
 
         </ResourceDictionary>
          
