--- a/Projects_Examples/Проект_7/Trading.WPF/Views/BuyView.xaml
+++ b/Projects_Examples/Проект_7/Trading.WPF/Views/BuyView.xaml
@@ -13,18 +13,27 @@
         </Grid.RowDefinitions>
 
         <WrapPanel Grid.Row="0" HorizontalAlignment="Center">
-            <TextBox Text="{Binding Symbol, UpdateSourceTrigger=PropertyChanged}"/>
-            <Button Content="Search" Command="{Binding SearchSymbolCommand}"/>
+            <TextBox Width="150" Text="{Binding Symbol, UpdateSourceTrigger=PropertyChanged}"/>
+            <Button Margin="10,0,0,0" Content="Search" Command="{Binding SearchSymbolCommand}"/>
         </WrapPanel>
 
-        <WrapPanel Grid.Row="1" Margin="0,10,0,0">
-            <Border BorderBrush="Black" BorderThickness="1" Padding="20">
+        <WrapPanel Grid.Row="1" Margin="0,20,0,0">
+            <WrapPanel.Style>
+                <Style TargetType="WrapPanel">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding SearchResultSymbol}" Value="">
+                            <Setter Property="Visibility" Value="Collapsed"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </WrapPanel.Style>
+            <Border BorderBrush="Gray" BorderThickness="0,1,1,1" Padding="20" CornerRadius="4,0,0,4">
                 <StackPanel>
-                    <TextBlock HorizontalAlignment="Center" FontSize="32" Text="{Binding Symbol}"/>
-                    <TextBlock Margin="0,10,0,0" Text="{Binding StockPrice, StringFormat={}{0:C}}"/>
+                    <TextBlock HorizontalAlignment="Center" FontSize="32" Text="{Binding SearchResultSymbol}"/>
+                    <TextBlock HorizontalAlignment="Center" Margin="0,10,0,0" Text="{Binding StockPrice, StringFormat={}{0:C}}"/>
                 </StackPanel>
             </Border>
-            <Border BorderBrush="Black" BorderThickness="1" Padding="20">
+            <Border BorderBrush="Gray" BorderThickness="1" Padding="20" CornerRadius="0,4,4,0">
                 <StackPanel>
                     <WrapPanel Margin="0,10">
                         <TextBlock Width="150" Text="Shares to buy:"/>
