--- a/Projects_Examples/Проект_7/Trading.WPF/MainWindow.xaml
+++ b/Projects_Examples/Проект_7/Trading.WPF/MainWindow.xaml
@@ -25,7 +25,8 @@
                     </Style.Triggers>
                 </Style>
             </Grid.Style>
-            <controls:NavigationBar Grid.Row="0" DataContext="{Binding Navigator}"/>
+            
+            <controls:NavigationBar/>
         </Grid>
 
         <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto"
