--- a/Projects_Examples/Проект_7/Trading.WPF/Styles/Common.xaml
+++ b/Projects_Examples/Проект_7/Trading.WPF/Styles/Common.xaml
@@ -52,6 +52,9 @@
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Background" Value="{StaticResource BrushPrimary1}"/>
             </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Opacity" Value="0.5"/>
+            </Trigger>
         </Style.Triggers>
     </Style>
 
