--- a/Projects_Examples/Проект_7/Trading.WPF/App.xaml
+++ b/Projects_Examples/Проект_7/Trading.WPF/App.xaml
@@ -25,7 +25,11 @@
             </DataTemplate>
 
             <DataTemplate DataType="{x:Type vm:LoginViewModel}">
-                <v:LoginView LoginCommand="{Binding LoginCommand}"/>
+                <v:LoginView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type vm:RegisterViewModel}">
+                <v:RegisterView/>
             </DataTemplate>
 
         </ResourceDictionary>
