--- a/Projects_Examples/Проект_7/Trading.WPF/Views/RegisterView.xaml
+++ b/Projects_Examples/Проект_7/Trading.WPF/Views/RegisterView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Trading.WPF.Views.LoginView"
+﻿<UserControl x:Class="Trading.WPF.Views.RegisterView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,21 +6,17 @@
              xmlns:local="clr-namespace:Trading.WPF.Views"
              xmlns:components="clr-namespace:PasswordBoxMVVM.Components;assembly=PasswordBoxMVVM"
              mc:Ignorable="d" 
-             d:DesignHeight="450" 
-             d:DesignWidth="800"
-             FontSize="24">
+             d:DesignHeight="450" d:DesignWidth="800">
 
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </UserControl.Resources>
-    
     <UserControl.Background>
         <ImageBrush
-            ImageSource="/Resources/backgr.jpg"
+            ImageSource="/Resources/login-background.jpg"
             Opacity="0.5"
             Stretch="UniformToFill" />
     </UserControl.Background>
-
     <Border Margin="25" Padding="50"
         HorizontalAlignment="Center"
         VerticalAlignment="Center"
@@ -43,14 +39,16 @@
                 FontSize="48"
                 Text="Simple Trader" />
 
-            <TextBlock Grid.Row="1" Margin="0 10"
+            <TextBlock Grid.Row="1" Margin="0,10"
                 HorizontalAlignment="Center"
                 FontSize="18"
                 FontWeight="Thin"
                 Text="The world's simplest stock trading application." />
 
-            <Grid Grid.Row="2" Margin="0 20">
+            <Grid Grid.Row="2" Margin="0,20">
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
@@ -58,43 +56,65 @@
                     <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
 
-                <Grid Grid.Row="0" Margin="0 10">
+                <Grid Grid.Row="0" Margin="0,10">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto" SharedSizeGroup="Label" />
+                        <ColumnDefinition Width="300" />
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock Grid.Column="0" Text="Email" />
+                    <TextBox Grid.Column="1" Margin="20,0,0,0"
+                        Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}" />
+                </Grid>
+
+                <Grid Grid.Row="1" Margin="0,10">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto" SharedSizeGroup="Label" />
                         <ColumnDefinition Width="300" />
                     </Grid.ColumnDefinitions>
 
                     <TextBlock Grid.Column="0" Text="Username" />
-                    <TextBox Grid.Column="1" Margin="20 0 0 0"
+                    <TextBox Grid.Column="1" Margin="20,0,0,0"
                         Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}" />
                 </Grid>
 
-                <Grid Grid.Row="1" Margin="0 10">
+                <Grid Grid.Row="2" Margin="0,10">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto" SharedSizeGroup="Label" />
                         <ColumnDefinition Width="300" />
                     </Grid.ColumnDefinitions>
 
                     <TextBlock Grid.Column="0" Text="Password" />
-                    <components:BindablePasswordBox Grid.Column="1" Margin="20 0 0 0"
+                    <components:BindablePasswordBox Grid.Column="1" Margin="20,0,0,0"
                         Password="{Binding Password}" />
                 </Grid>
 
-                <Button Grid.Row="2" Margin="0 10"
+                <Grid Grid.Row="3" Margin="0,10">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto" SharedSizeGroup="Label" />
+                        <ColumnDefinition Width="300" />
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock Grid.Column="0" Text="Confirm Password" />
+                    <components:BindablePasswordBox Grid.Column="1" Margin="20,0,0,0"
+                        Password="{Binding ConfirmPassword}" />
+                </Grid>
+
+                <Button Grid.Row="4" Margin="0,10"
                     HorizontalAlignment="Center"
-                    Command="{Binding LoginCommand}"
-                    Content="Login"
+                    Command="{Binding RegisterCommand}"
+                    Content="Register"
                     IsDefault="True" />
 
-                <Button Grid.Row="3" Margin="0 10 0 0"
+                <Button Grid.Row="5" Margin="0,10,0,0"
                     HorizontalAlignment="Center"
                     Background="Transparent"
-                    Command="{Binding ViewRegisterCommand}"
-                    Content="Don't have an account?"
+                    Command="{Binding ViewLoginCommand}"
+                    Content="Already have an account?"
                     FontSize="14"
                     Foreground="Blue" />
 
-                <TextBlock Grid.Row="4" Margin="0 10 0 0"
+                <TextBlock Grid.Row="6" Margin="0,10,0,0"
                     HorizontalAlignment="Center"
                     DataContext="{Binding ErrorMessageViewModel}"
                     Foreground="DarkRed"
@@ -103,26 +123,4 @@
             </Grid>
         </Grid>
     </Border>
-    <!--<Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto"/>
-            <ColumnDefinition Width="auto"/>
-        </Grid.ColumnDefinitions>
-
-        <TextBlock Text="UserName" Grid.Column="0" Grid.Row="0"/>
-        <TextBox Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" Grid.Row="0"/>
-
-        <TextBlock Text="Password" Grid.Column="0" Grid.Row="1"/>
-        <PasswordBox x:Name="pbPassword" Grid.Column="1" Grid.Row="1"/>
-
-        <Button Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center"
-                Command="{Binding LoginCommand}"
-                Content="Login"
-                Click="Login_Click"/>
-    </Grid>-->
 </UserControl>
