--- a/Projects_Examples/Проект_7/Trading.WPF/App.xaml
+++ b/Projects_Examples/Проект_7/Trading.WPF/App.xaml
@@ -32,6 +32,10 @@
                 <v:RegisterView/>
             </DataTemplate>
 
+            <DataTemplate DataType="{x:Type vm:SellViewModel}">
+                <v:SellView/>
+            </DataTemplate>
+
         </ResourceDictionary>
          
     </Application.Resources>
