--- a/Projects_Examples/Проект_7/Trading.WPF/App.xaml
+++ b/Projects_Examples/Проект_7/Trading.WPF/App.xaml
@@ -33,7 +33,7 @@
             </DataTemplate>
 
             <DataTemplate DataType="{x:Type vm:SellViewModel}">
-                <v:SellView/>
+                <v:SellView SelectedAssetChangedCommand="{Binding SearchSymbolCommand}" />
             </DataTemplate>
 
         </ResourceDictionary>
