--- a/Projects_Examples/Проект_7/Trading.WPF/Views/RegisterView.xaml
+++ b/Projects_Examples/Проект_7/Trading.WPF/Views/RegisterView.xaml
@@ -13,7 +13,7 @@
     </UserControl.Resources>
     <UserControl.Background>
         <ImageBrush
-            ImageSource="/Resources/login-background.jpg"
+            ImageSource="/Resources/backgr.jpg"
             Opacity="0.5"
             Stretch="UniformToFill" />
     </UserControl.Background>
